# chatsql

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  run.py  test_integration.py
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/application/: __init__.py  rag_service.py  sql_validator.py
backend/app/application/datasources/: __init__.py  clickhouse_impl.py  doris.py  hive.py  manager.py  mysql_impl.py  postgresql_impl.py  presto.py  spark.py
backend/app/application/learn/: __init__.py  distiller.py  service.py
backend/app/application/llm/: __init__.py
backend/app/application/responses/: __init__.py  streaming.py
backend/app/application/services/: responses_service.py
backend/app/application/tools/: builtin_tools.py
backend/app/domain/: __init__.py  context_domain.py  dashboard_domain.py  response_domain.py  session_domain.py
backend/app/infrastructure/: __init__.py  models.py
backend/app/infrastructure/persistence/: context_store.py  dashboard_store.py
backend/app/infrastructure/repositories/: conversation_store.py
backend/app/presentation/: __init__.py
backend/app/presentation/http/routes/: context_routes.py  dashboard_routes.py  datasource_routes.py  learn_routes.py  responses_routes.py  sessions_routes.py  system_routes.py
backend/app/presentation/http/security/: auth_utils.py
docs/: 00-项目概述.md  01-快速开始.md  02-架构设计.md  03-Agent系统.md  04-数据源与方言.md  05-跨数据库查询.md  06-表与指标.md  07-学习系统.md  08-LLM配置.md  09-API参考.md  10-部署指南.md  11-开发指南.md
frontend/: index.html  package.json  (+3 more)
(+6 files in other folders)
